--- a/MsgWhatsApp/packages.config
+++ b/MsgWhatsApp/packages.config
@@ -4,6 +4,7 @@
   <package id="Google.Apis.Auth" version="1.40.2" targetFramework="net461" />
   <package id="Google.Apis.Calendar.v3" version="1.40.2.1643" targetFramework="net461" />
   <package id="Google.Apis.Core" version="1.40.2" targetFramework="net461" />
+  <package id="iTextSharp" version="5.5.13.1" targetFramework="net461" />
   <package id="Microsoft.IdentityModel.Logging" version="1.1.2" targetFramework="net461" />
   <package id="Microsoft.IdentityModel.Tokens" version="5.1.2" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net461" />
